# CameraControl

./: .gitignore  CMakeLists.txt  README.md  config.yaml
src/: Camera.cpp  Camera.h  Configuration.cpp  Configuration.h  Controller.cpp  Controller.h  Joystick.cpp  Joystick.h  main.cpp
